<resources>
    <string name="app_name">LinkRestaurantStaff</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="permission_denied">You don\'t have permission to login</string>
    <string name="user_information">"User Information "</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="sign_in">Sign In</string>
    <string name="update_information">Update Information</string>
    <string name="our_restaurant">Order List</string>
    <string name="money_sign">GH₵</string>
    <string name="orderNumber">Order #1234</string>
    <string name="status">Status</string>
    <string name="action_save">Save</string>
    <string name="order_detail">Order Detail</string>
    <string name="food_name">Food Name</string>
    <string name="quantity_2">Quantity: 2</string>
    <string name="size_large">Size: Large</string>
    <string name="add_on">Add On</string>
    <string name="action_refresh">Refresh</string>
    <string name="hot_food">Hot Food</string>
    <string name="shipper">Shipper</string>
    <string name="order_need_ship">Order Need Ship</string>
    <string name="orderStatus">Processing</string>
    <string name="phone_number">+233273637961</string>
    <string name="cash_on_deliver">Cash On Deliver</string>
    <string name="order_on">Order on</string>
    <string name="money_text">200.00</string>
    <string name="orderDate">05/14/2021</string>
    <string name="num_of_item_2">Num of Item 2</string>
    <string name="ready_to_ship">Ready To Ship</string>
</resources>