<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="10"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_order_number"
                android:text="@string/orderNumber"
                android:textSize="22sp"
                android:fontFamily="@font/magnifika"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_order_status"
                android:text="@string/orderStatus"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/bt_border_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_order_phone"
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_order_address"
                android:text="@string/address"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_payment_method"
                android:text="@string/cash_on_deliver"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dip"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/order_on"
                    android:fontFamily="@font/magnifika"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:src="@drawable/ic_baseline_date_range_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_order_date"
                    android:text="@string/orderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_order_total_price"
                    android:text="@string/money_text"
                    android:textSize="20sp"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:textColor="@color/button_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_num_of_item"
                    android:text="@string/num_of_item_2"
                    android:fontFamily="@font/magnifika"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_ship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_alignSelf="flex_start"
                android:background="@drawable/border_button"
                android:fontFamily="@font/magnifika"
                android:text="@string/ready_to_ship"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>