<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_food_image"
                android:scaleType="fitXY"
                android:layout_gravity="center_vertical"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_food_name"
                    android:text="@string/food_name"
                    android:fontFamily="@font/magnifika"
                    android:textSize="22sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_food_quantity"
                    android:text="@string/quantity_2"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_food_size"
                    android:text="@string/size_large"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <com.github.florent37.expansionpanel.ExpansionHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:expansion_headerIndicator="@+id/headerIndicator"
                app:expansion_layout="@+id/expansionLayout"
                app:expansion_toggleOnClick="true">

                <TextView
                    android:text="@string/add_on"
                    android:textSize="22sp"
                    android:fontFamily="@font/magnifika"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:adjustViewBounds="true"
                    android:id="@+id/headerIndicator"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp"/>

            </com.github.florent37.expansionpanel.ExpansionHeader>

            <com.github.florent37.expansionpanel.ExpansionLayout
                android:id="@+id/expansionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_add_on"
                    android:text="@string/add_on"
                    android:textSize="16sp"
                    android:fontFamily="@font/magnifika"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </com.github.florent37.expansionpanel.ExpansionLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>